<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1923">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencies"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivCurrencyIcon"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:contentDescription="@string/currency_icon"
                android:padding="@dimen/_16sdp"
                android:background="@drawable/circle_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvCurrencyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCurrencyIcon"
                tools:text="VALORANT POINTS" />

            <TextView
                android:id="@+id/tvCurrencySingular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textAlignment="center"
                android:textColor="@color/valorant_red"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCurrencyName"
                tools:text="VALORANT POINT" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                app:cardBackgroundColor="#1A1A1A"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/tvCurrencySingular">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_path"
                        android:textColor="@color/valorant_red"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAssetPath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        tools:text="ShooterGame/Content/Currencies/Currency_AresPoints_DataAsset" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout> 